docs/constitution/v4.0/Minimal_Kernel_API.md
# DecisionGraph Core — Minimal Kernel API v0.4

**Normative Reference:** DecisionGraph Core Constitution v0.4 RC  
In case of conflict, the Constitution takes precedence.

This document describes the **implementation surface** of `@decisiongraph/core` under the
topology-derived state model introduced in Constitution v0.4.

---

## Model Layers

- **Core Model (Normative):** Node / Edge / GraphStore semantics are defined by the Constitution v0.4.
- **Kernel (Deterministic):** Applies operations to produce a GraphStore state. The kernel does not "judge".
- **Policy (Enforcement):** Constitutional requirements are enforced via `ConstitutionalPolicy`.
- **Log Model (Transport):** A sequence of ops per Graph, identified by `graphId` (see JSON Schema v0.4).

---

## Design Principles

- Deterministic application: same inputs → same outputs
- No AI reasoning inside the kernel
- No random IDs generated by the kernel
- Constraints are explicit and enforceable (via policy)
- Single-graph GraphStore is fully v0.3 compatible
- Node status is **never stored** — derived from topology only

---

## 1) Core Types

### IDs (unchanged from v0.3)

```ts
type NodeId   = Brand<string, "NodeId">;
type EdgeId   = Brand<string, "EdgeId">;
type AuthorId = Brand<string, "AuthorId">;
type CommitId = Brand<string, "CommitId">;
type GraphId  = Brand<string, "GraphId">;
```

ID generation is external to the kernel.
All IDs (NodeId, EdgeId, CommitId, GraphId) **MUST** be unique across the entire GraphStore.

### Status (updated in v0.4)

- `NodeStatus`: **removed** — Nodes carry no stored status
- `EdgeStatus`: `"Active" | "Superseded"` — `"Deprecated"` removed; binary only

### effectiveStatus (NEW in v0.4)

```ts
// Topology-derived node status — the sole authority for supersession.
// A Node is "Superseded" if and only if an Active "supersedes" edge targets it.
// This function is pure: it reads only edge topology, never any stored Node field.
function effectiveStatus(store: GraphStore, id: NodeId): "Active" | "Superseded";
```

`effectiveStatus` is cross-graph aware and replay-safe by construction.
It is the **only** way to determine whether a Node has been superseded.

### Node (updated in v0.4)

```ts
type Node = {
  id: NodeId;
  kind: string;
  // status field removed — Constitution v0.4 Section 2.3
  // A proposition cannot contain its own negation or replacement state.
  createdAt: string;   // ISO timestamp string
  author: AuthorId;
  payload?: unknown;
};
```

### Edge (updated in v0.4)

```ts
type Edge = {
  id: EdgeId;
  type: "depends_on" | "supports" | "refutes" | "supersedes";
  // "overrides" removed in v0.4 — use "supersedes" or encode in payload
  from: NodeId;        // MAY refer to a Node in a different Graph (cross-graph edge)
  to: NodeId;          // MAY refer to a Node in a different Graph (cross-graph edge)
  status: "Active" | "Superseded";
  // "Deprecated" removed in v0.4 — EdgeStatus is binary
  createdAt: string;   // ISO timestamp string
  author: AuthorId;
  payload?: unknown;
};
```

### Commit (unchanged)

```ts
type Commit = {
  commitId: CommitId;
  createdAt: string;   // ISO timestamp string
  author: AuthorId;
};
```

### Graph (unchanged from v0.3)

```ts
type Graph = {
  graphId: GraphId;
  nodes: Record<string, Node>;
  edges: Record<string, Edge>;
  commits: Commit[];
};
```

### GraphStore (unchanged from v0.3)

```ts
type GraphStore = {
  graphs: Record<string, Graph>;  // keyed by graphId
};

type ResolvedNode = { graphId: GraphId; node: Node };
type ResolvedEdge = { graphId: GraphId; edge: Edge };

function resolveNode(store: GraphStore, id: NodeId): ResolvedNode | null;
function resolveEdge(store: GraphStore, id: EdgeId): ResolvedEdge | null;
function emptyStore(): GraphStore;
```

---

## 2) Operations (unchanged from v0.3)

Operations target a specific Graph within the GraphStore (identified by `graphId`).

```ts
type AddNodeOp      = { type: "add_node"; node: Node };
type AddEdgeOp      = { type: "add_edge"; edge: Edge };
type SupersedeEdgeOp = {
  type: "supersede_edge";
  oldEdgeId: EdgeId;
  newEdge: Edge;
};
type CommitOp = {
  type: "commit";
  commitId: CommitId;
  createdAt: string;
  author: AuthorId;
};

type Operation = AddNodeOp | AddEdgeOp | SupersedeEdgeOp | CommitOp;
```

`supersede_edge` is an **atomic** operation (Constitution v0.4 Section 5.2).
The old edge becomes `Superseded` and the new edge becomes `Active`
in a single indivisible transition. Partial-failure states are never observable.

---

## 3) Policy (unchanged from v0.3)

```ts
type Violation = {
  code: string;
  message: string;
  path?: string;
};

type Policy = {
  // Single-graph operation validation (Graph-level immutability, author, etc.)
  validateOperation(store: GraphStore, graphId: GraphId, op: Operation): Violation[];

  // Whole-store validation (cross-graph edges, circular dependencies)
  validateStore(store: GraphStore): Violation[];
};
```

### ConstitutionalPolicy (v0.4)

Enforces all v0.3 constraints plus:

- `Node.status` field **prohibited** — presence of any value is rejected
- `EdgeType: "overrides"` rejected as `INVALID_EDGE_TYPE`
- `EdgeStatus: "Deprecated"` rejected as `INVALID_EDGE_STATUS`
- Self-loop edges (`from === to`) rejected as `SELF_LOOP`
- `supersedes` cycles detected as `CIRCULAR_DEPENDENCY`
- `effectiveStatus`-based `DEPENDENCY_ON_SUPERSEDED` detection
  (topology-derived, not stored Node attribute)

---

## 4) Kernel Interface (unchanged signatures from v0.3)

### apply / applyBatch

```ts
type KernelError = {
  kind: "PolicyViolation" | "UnknownOperation";
  violations?: Violation[];
  message?: string;
};

type ApplyEvent =
  | { type: "applied"; opType: Operation["type"] }
  | { type: "rejected"; opType: Operation["type"]; error: KernelError };

type ApplyResult = { store: GraphStore; events: ApplyEvent[] };

function apply(
  store: GraphStore,
  graphId: GraphId,
  op: Operation,
  policy: Policy
): ApplyResult;

function applyBatch(
  store: GraphStore,
  graphId: GraphId,
  ops: Operation[],
  policy: Policy
): ApplyResult;
```

### lint

```ts
type LintResult = { ok: true } | { ok: false; violations: Violation[] };

// Lint a single Graph within the store
function lint(store: GraphStore, graphId: GraphId, policy: Policy): LintResult;

// Lint the entire GraphStore (cross-graph validation)
function lintStore(store: GraphStore, policy: Policy): LintResult;
```

### replay / replayAt

```ts
type GraphLog = { graphId: GraphId; ops: Operation[] };

function replay(logs: GraphLog[], policy: Policy): GraphStore;
function replayAt(logs: GraphLog[], commitId: string, policy: Policy): GraphStore;
```

**Replay ordering contract — Normative:**  
Logs MUST be provided in deterministic chronological order.
The array position of each log defines the replay time axis.
`createdAt` timestamps are preserved for audit but do not drive replay ordering.
Callers are responsible for sorting logs before calling `replay()` or `replayAt()`.
This contract is normative. The kernel does not sort logs.

`replayAt` uses a **store-wide boundary**: once the target `commitId` is encountered
in any log, all remaining ops across all logs are dropped.

### diff

```ts
type DiffResult = {
  addedNodes: string[];
  removedNodes: string[];
  addedEdges: string[];
  removedEdges: string[];
  changedNodes: string[];
  changedEdges: string[];
};

// Diff two GraphStores (cross-graph aware)
function diffStore(a: GraphStore, b: GraphStore): DiffResult;

// Diff two individual Graphs
function diff(a: Graph, b: Graph): DiffResult;
```

### resolve (unchanged from v0.3)

```ts
function resolveNode(store: GraphStore, id: NodeId): ResolvedNode | null;
function resolveEdge(store: GraphStore, id: EdgeId): ResolvedEdge | null;
```

---

## 5) Error Codes (updated in v0.4)

| Code | Severity | Description |
|---|---|---|
| `AUTHOR_REQUIRED` | ERROR | author is missing or empty |
| `IMMUTABLE_AFTER_COMMIT` | ERROR | mutation attempted on committed Graph |
| `COMMIT_ID_DUP` | ERROR | commitId already exists in GraphStore |
| `COMMIT_ALREADY_EXISTS` | ERROR | commit attempted on already-committed Graph |
| `NODE_ID_REQUIRED` | ERROR | node id is missing or empty |
| `NODE_ID_DUP` | ERROR | nodeId already exists in GraphStore (store-wide) |
| `EDGE_ID_REQUIRED` | ERROR | edge id is missing or empty |
| `EDGE_ID_DUP` | ERROR | edgeId already exists in GraphStore (store-wide) |
| `EDGE_NOT_FOUND` | ERROR | oldEdgeId not found in GraphStore |
| `EDGE_NOT_ACTIVE` | ERROR | old edge must be Active to supersede |
| `EDGE_NOT_RESOLVED` | ERROR | cross-graph edge endpoint cannot be resolved |
| `INVALID_EDGE_TYPE` | ERROR | edge type not in v0.4 vocabulary (e.g. `"overrides"`) |
| `INVALID_EDGE_STATUS` | ERROR | edge status not in v0.4 vocabulary (e.g. `"Deprecated"`) |
| `INVALID_NODE_STATUS` | ERROR | node status field present — prohibited in v0.4 |
| `SELF_LOOP` | ERROR | edge where `from === to` (NEW in v0.4) |
| `CIRCULAR_DEPENDENCY` | ERROR | cycle detected within or across Graphs |
| `DEPENDENCY_ON_SUPERSEDED` | ERROR | Active `depends_on` edge targets a topology-Superseded Node |
| `DEPENDENCY_ON_DEPRECATED` | — | **removed in v0.4** |
| `SUPERSEDE_REQUIRES_NEW_EDGE_ID` | ERROR | newEdge.id must differ from oldEdgeId |
| `NEW_EDGE_NOT_ACTIVE` | ERROR | new edge in supersede_edge must be Active |

---

## 6) Backward Compatibility

A single-graph GraphStore is fully v0.3 compatible in operation:

```ts
// v0.3 style (still valid in v0.4)
const store = emptyStore();
const result = applyBatch(store, "G:default" as GraphId, ops, policy);
```

**Breaking changes from v0.3:**

- `Node.status` field must be removed from all node objects
- `EdgeType: "overrides"` is rejected — replace with `"supersedes"`
- `EdgeStatus: "Deprecated"` is rejected — retire via `supersede_edge`
- `node.status === "Superseded"` checks must be replaced with `effectiveStatus(store, nodeId)`
- Graph-only replay API removed — use `replay([{ graphId, ops }])` instead

See Migration Guide v0.3 → v0.4 for full details.
